# auto_agents

./: .env.example  .gitignore  MCP_README.md  README.md  pyproject.toml  requirements.txt
agent_test/: autogen_test.py  gpt4o_test.py  mcp_client_test.py  mcp_config_demo.py  mcp_server_cli.py  mcp_server_test.py  mcp_test.py
src/: main.py
src/agents/: critic_agent.py  executor_agent.py  gpt4o_agent.py  mcp_agent.py  nl_ui_agent.py  planner_agent.py  retriever_agent.py  ui_tool_agent.py  ui_use_from_command_with_sequence.py
src/config/: mcp_config.json
src/tools/: db_tool.py  enhanced_mcp_client.py  mcp_client.py  mcp_server_manager.py  ui_automation.py  web_scraper.py
